# MaskInterpreter

./: PYTORCH_PORT_PLAN.md  README.md  dataset.py  example.ipynb  global_vars.py  init_env_vars.py  mg_analyzer.py  pyproject.toml  quickstart.md  replace_dir.sh  test.py  test.sh  train.py
create_data/: create_metadata.py  create_metadata_pertrub.py  download_and_create_dataset_full.py  download_and_create_dataset_singlecell.py  segment_and_create_pertrub_dataset.py
examples/: quickstart.py
figures/: 0_reproduce_unet_scores.py  10_validation_figure.py  11_calculate_spatial_pcc.py  12_calculate_explanation_mask_efficacy_perturbation.py  13_calculate_unet_scores_perturbations.py  14_agg_and_analyze_mask_efficacy_perturbationspy  15_agg_and_analyze_unet_predictions_perturbations.py  16_dremi.py  17_ablation_stydy.py  18_examples.py  18b_examples_3d.py  1_choose_noise_scale.py  2_choose_th.py  3_calculate_unet_scores.py  4_calculate_explanation_mask_efficacy.py  5_agg_and_analyze_mask_efficacy.py  5a_agg_and_analyze_mask_efficacy_nested.py  6_agg_and_analyze_unet_predictions.py  6a_agg_and_analyze_unet_predictions_nested.py  7_compare_calculations.py  plot_predictions_from_input_image.py
gui/: gui.py  gui_logic.py
mask_interpreter/: __init__.py  analyze.py  config.py  metrics.py  predictors.py  train.py  unet.py
md/: data.md  examples.md  quickstart.md  reproduce.md  usage.md
models/: MaskInterpreter.py  MaskInterpreterCLF.py  MaskInterpreterRegression.py  clf-cifar10.py  mi_reg_cellcycle_eval.py  regressor_cellcycle.py
tests/: test_analyze.py  test_data.py  test_interpreter_clf_reg.py  test_interpreter_image2image.py  test_metrics.py  test_patches.py  test_train.py  test_unet.py  toy.py
utils/: __init__.py
(+10 files in other folders)
